# BellhopPropagationModel

./: .dockerignore  .gitignore  CMakeLists.txt  DUAL_ARTIFACTS_BUILD_GUIDE.md  GITEA_TO_GITHUB_GUIDE.md  GITHUB_ACTIONS_FIX.md  GITHUB_ACTIONS_SUMMARY.md  INTERFACE_COMPLIANCE_REPORT.md  LOCAL_BUILD_GUIDE.md  MULTI_PLATFORM_BUILD.md  PYTHON_COMPATIBILITY.md  README.md  analyze_output_problems.py  analyze_ray_distance_limits.py  build.sh  build_local.sh  build_windows.ps1  ci_test.sh  ci_test_windows.ps1  complete_fix_solution.py  debug_distance.py  debug_scientific_notation.py  demo_build.sh  deploy.sh  detailed_ray_analysis.py  fix_output_problems.py  git_manager.sh  input.json  manager.sh  requirements.txt  run_comprehensive_test.sh  scripts_manager.sh  test_fixed_encoder.py  test_fixed_scientific_notation.py  test_json_encoder.py  test_json_encoder_issue.py  test_medium_rays.py  test_pressure_format.py  test_ray_params.py  test_scientific_notation_fix.py  (+6 more)
.github/workflows/: build-cross-platform.yml  build.yml  interface-compliance-validation.yml  multi-platform-build.yml  multi-platform-docker.yml  release.yml  test-build.yml
.github/workflows-archive/: README.md  multi-platform-docker.yml
docker-local/: Dockerfile.centos7  Dockerfile.centos8-arm64  Dockerfile.debian11  Dockerfile.debian11-arm64  centos7_setup.sh  centos8_arm64_setup.sh  debian11_arm64_setup.sh  debian11_setup.sh
docs/: CYTHON_README.md  DELIVERY_GUIDE.md  DELIVERY_OPTIONS.md  FINAL_SUMMARY.md  GITHUB_ACTIONS.md  NUITKA_BUILD_SYSTEM.md  SCRIPTS_README.md
include/: BellhopPropagationModelInterface.h
python_core/: BellhopPropagationModel.py  __init__.py  bellhop.py  config.py  env.py  logger.py  project.py  readwrite.py
python_wrapper/: __init__.py  bellhop_wrapper.py
scripts/: 00_environment_setup.sh  01_compile_nuitka.py  01_development_validation.sh  02_check_deps.py  02_performance_testing.sh  03_integration_testing.sh  04_cleanup.sh  04_deployment.sh  05_monitoring.sh  06_maintenance.sh  99_test_orchestrator.sh  README.md  build.sh  build_centos8-arm64.sh  build_centos8-arm64_selfcontained.sh  build_complete_dual_artifacts.sh  build_debian11-arm64.sh  build_debian11-arm64_selfcontained.sh  build_for_github_actions.sh  build_windows-x64.sh  compile_nuitka_cross_platform.py  create_delivery_package.sh  delivery.sh  python_env_setup.sh  run_bellhop.sh  setup_cython.py  setup_runtime_env.sh
src/: BellhopPropagationModel.cpp  BellhopPropagationModel_cython.cpp  BellhopPropagationModel_exe.cpp  BellhopPropagationModel_exe_cython.cpp  BellhopPropagationModel_exe_nuitka.cpp  BellhopPropagationModel_nuitka.cpp
wrapper/: BellhopPropagationModelInterface.cpp  BellhopPropagationModelInterface.h
